===v4.7.0===
 * Completely redid the color system. Colors are now defined (in the main optons) globally, with the option to configure them per icon type and override the global settings.
 * Bug Fixes:
 ** (r316) TellMeWhen_Options.lua:2831: attempt to index local "spaceControl" (a nil value)
 
===v4.6.7===
 * Bug Fixes:
 ** (r310) Fixed sound event text overflow bug
 ** (r311) Possibly fixed a bug that was causing the event settings of deleted groups to stick around
 ** (r312) Added Sudden Death/Colossus Smash to the cooldown reset tracker for Unit Cooldown icons
 ** (r313) TellMeWhen will no longer completely break when loading with ButtonFacade but not Masque installed
 
===v4.6.6===
 * The suggestion list has been completely rewritten, and many features have been added.
 * Seeing as Masque has been out for a month now, I think it is safe to say that ButtonFacade is now obsolete. Removed all support for ButtonFacade
 * Added a setting to make events only fire if the icon is shown.
 * Bug Fixes:
 ** (r300) default.lua:67: attempt to index local 'ics' (a nil value)
 ** (r301) TellMeWhen_Options-4.6.4.lua:5575 bad argument #1 to "pairs" (table expected, got nil)
 ** (r302) You can now properly undo a change in sound file
 ** (r302) TellMeWhen-4.6.6.lua:2259: bad argument #3 to "format" (number expected, got nil)
 ** (r302) TellMeWhen-4.6.6.lua:192: attempt to compare nil with number
 ** (r304) Fixed various bugs relating to inserting text into strings with multibyte characters (zhCN, zhTW, koKR, ruRU)
 ** (r307) TellMeWhen_Options.lua:4662: Usage: GetModule(name, silent): "name" - Cannot find module "cooldown"
 ** (r307) Imported strings created in r307+ into r307+ will now try extra hard to fix any errors casued by Blizzard's buggy editboxes.
 ** (r308) Event settings in the icon editor should now always updated to reflect their current setting.
 ** (r308) Fixed buggy event button texts for zhCN and zhTW clients.
 
===v4.6.5===
 * Bug Fixes: