@@ -58,3 +58,6 @@ L["COLOR_NS_DESC"]	 				  = L["COLOR_NS_DESC"]					 :format("%s", L["ICONMENU_AL
 
 L["COLOR_HEADER"] 					  = L["COLOR_HEADER"]					 :format("%s", L["COLOR_OVERRIDEDEFAULT"])
 
+
+L["ANN_WHISPERTARGET_DESC"] 		  = L["ANN_WHISPERTARGET_DESC"]			 :format(L["ANN_UNITSUBSTITUTIONS"])
+L["ANN_EDITBOX_DESC"] 				  = L["ANN_EDITBOX_DESC"]				 :format(L["ANN_UNITSUBSTITUTIONS"], "%s")
